# bootcamp_jd_aula_09

./: README.md  etl.py  exemplo.py  exemplo_loguru_errors.py  main.py  pipeline.py  pyproject.toml  utils_log.py
